--- a/1.html
+++ b/1.html
@@ -19,5 +19,30 @@
     <a href="https://www.google.com/maps/place/%EA%B4%91%EC%A3%BC%EA%B4%91%EC%97%AD%EC%8B%9C+%EB%82%A8%EA%B5%AC+%ED%9A%A8%EB%8D%95%EB%8F%99+%EB%85%B8%EB%8C%80%EC%8B%A4%EB%A1%9C+33/@35.1068886,126.9052814,17z/data=!3m1!4b1!4m5!3m4!1s0x35718bab334ec8e3:0x38df99ef5b8b0307!8m2!3d35.1068886!4d126.9074701" target="_blank" title="home map">달링과 내가 사는 집</a>에서 <p>맛있는 반찬을 해먹고</p> <p>동시에 환경보호와 가정경제에도 도움이 되게 하려는 목적으로
         집반찬을 만들기 시작했다. </p>
     <img src="banchan.jpg" width="300">
+ <p>
+    <div id="disqus_thread"></div>
+    <p>
+    <script>
+
+  <!-- LiveRe City install code -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC80OTg2MC8yNjM1MQ==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> Please activate JavaScript for write a comment in LiveRe</noscript>
+</div>
+<!-- completed City install code -->
+</p>
+ </p>   
 </body>
 </html>
