--- a/4.html
+++ b/4.html
@@ -16,8 +16,8 @@
     </ol>
     <h2><strong>레시피</strong></h2> 
 <p>
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dDWTASKVRzk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      </p>
-    <img src="banchan.jpg" width="300">
+    
 </body>
 </html>
