--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <title>Chalie's Food Art</title> 
     <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164524767-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-164524767-1');
+</script>
+
+
 </head>
 
 <body>
