--- a/2.html
+++ b/2.html
@@ -3,6 +3,12 @@
 <head>
     <title>Chalie's Food Art 봄철반찬</title> 
     <meta charset="utf-8">
+    <style>
+        a {
+          color:black;
+          text-decoration:none;
+        }
+  </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164524767-1"></script>
 <script>
